added listupdate onload

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ section{
     </style>
 </head>
 <!-- later add listupdate -->
-<body onload= "getMenu();  updateSelect(); chargerSelector();">
+<body onload= "getMenu();  listUpdate(); chargerSelector();">
     <!-- hideSelection() -->
         <div class="container">
             
