removed stat box

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ h3#bolder{
 section{
     height:70%;
 }
-       .mygrid {
+h       .mygrid {
   display: grid;
   grid-column-gap: 50px;
 }
@@ -97,34 +97,15 @@ section{
             <div class="row" class="mygrid">
                 <div class="col-sm-6 col-md-6 col-lg-6">
                     <div class="card" id="newCraBox" >
-                        <h5 id="bolder"> <a href="https://tfim.tenniscores.com/?mod=nndz-TjJUcW1lZS8wT3BkbWl3UQ%3D%3D&seasonid=nndz-WXlhN3d3PT0%3D&divid=nndz-WlM2d3dBPT0%3D&teamid=nndz-WUNPN3hyaz0%3D">Consultez les stats des joueuses </a></h4> 
-                            <!-- <label for="playerCra" style="text-align: left; margin-top: 2%;">Joueur + ancien Cra</label> -->
-                            <!-- <form name = "update"> -->
-                            <select id="playerCra"  name="playerCra" class="C form-control mb-2 mr-sm-2" onchange="infoTous(this);" >
-                            </select>
-                                <div id="test"style='background-image: url("Images/cpeRog2.jpg"); background-size:cover; height:390px;object-fit:cover; padding:15px; margin-bottom:5px"'>
-                                   <!--  <input type= "text" id = "oldCra" class="update-cl" placeholder="Ancien Cra" style="width:50%" readonly> <br>
-                                    <input type= "text" class="update-cl" id = "newCra" placeholder="Nouveau cra" style="width:50%" onfocus="this.value=''; clearupdateMsg(this);"><br>
-                                    <input type="button" class="update-cl" style="width:50%" id="updatebtn" value="Mettre à jour" onClick="updateCra(indexCra);clearbox();">
-                                    <input type="button" class="update-cl" style="width:50%" id="updatebtn" value="Mettre à jour" onClick="updateMenu();"> -->
-                                    <div id="updateBox" class="content">
-                                        
-                                       <a class="iconClose" onClick="clearMsg();showLiens()">
-                                        <img src="Images/close.png" alt="closeBox" class="iconClose"></a>
-                                        <p id="updateCra" class="updateCra update-cl" style="text-align:justify">
-                                        </p>
-                                    </div>
-                                    <h5 id="msgUpdate" class="warning update-cl"></h5><br>
-                                </div>
-                                <div id = "liens" >
-                                    <h3 style="margin-top:10px; color:red">Liens utiles</h3><br>
-                                    <h6 id="dispos"><a href="https://doodle.com/meeting/participate/id/eZpWm96b">Joueuses disponibles d'après le Doodle</a></h6>
-                                    <h6><a href="https://www.cogesport.com/club/0020/0020.fwx?opt=1&lang=FR">Réservation des Terrains - Tennis 13</a></h6>
-                                    <h6><a href="https://tfim.tenniscores.com">Tennis féminin Interclub Montreal</a></h6>
-                                    <h6><a href="https://tfim.tenniscores.com/?mod=nndz-TjJiOWtORzkwTlJFb0NVU1NzOD0%3D&team=nndz-WUNPN3hyaz0%3D">Votre Equipe sur TFIM</a></h6>
+                            <div id = "liens" ><h3 style="margin-top:10px; color:red">Liens utiles</h3><br>
+                                     <h6><a href="https://tfim.tenniscores.com">Tennis féminin Interclub Montreal</a></h6>
+                                      <h6><a href="https://tfim.tenniscores.com/?mod=nndz-TjJiOWtORzkwTlJFb0NVU1NzOD0%3D&team=nndz-WUNPN3hyaz0%3D">Votre Equipe sur TFIM</a></h6>
+                                     <h6 id="search-player"><a href="https://tq.tournamentsoftware.com/find/player">Tennis Québec: chercher un(e) joueur(se)</a></h6>
+                                    <h6><a href="https://www.cogesport.com/club/0020/0020.fwx?opt=1&lang=FR">Réservation des Terrains - Tennis 13</a></h6>                                   
                                     <h6><a href="https://tq.tournamentsoftware.com/">Tournois Tennis Québec</a></h6>
+                                    <h6><a href= "https://tq.tournamentsoftware.com/ranking/ranking.aspx?rid=144">Classement seniors</a></h6·>
                                      <h6><a href="https://mailchi.mp/tennis.qc.ca/infolettre-12-semaine-du-19-dcembre-1054044" alt="infolettre TQ">Infolettre de Tennis Quebec</a></h6><br>
-                                     <h6><a href="https://www.tenniscanada.com/" alt="infolettre TQ">Tennis Canada</a></h6>
+                                     <h6><a href="https://www.tenniscanada.com/" alt="infolettre TQ">Tennis Canada site général</a></h6>
                                      
                                     <!-- <h5><a id="list-link" href="liste.html">liste html</a></h5><br>
                                     <h5><a id = "listtxt" href="list.txt">list.txt</a></h5> -->
