put player in one box

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ section{
                         </div>
                     </div>
                 </div>
-                <div class = "row">
+                <!-- <div class = "row">
                 <div class="col-sm-6 col-md-6 col-lg-6">
                     <div class="card">
                         <img id="photoSuper" class="card-img-top" src="Images/superEl.png" alt="Présentation"
@@ -157,7 +157,7 @@ section{
                                 </div>
                         </div>
                     </div>
-            </div>  
+            </div>   -->
             <!-- class="reduce" -->
                 <div style="display: flex;" id="choiceBox"  class="card card-choice" name="confirm">  
                     <input type="button" style="margin-top:15px; max-width: 90%; white-space: break-spaces" id="player-select" value="BON CHOIX! RECONFIRMEZ LA SELECTION SI CHANGEMENTS" onClick="getSelectedPlayers(); displayPlayers();"/>
