--- a/index.html
+++ b/index.html
@@ -137,15 +137,16 @@ section{
                                         <input type="button" onclick="clearlist()" style="max-width: 90%; white-space: normal" value="Annuler vos choix"> <br>
                                     </div>
                                     <div id="btn-aligne">
+                                        <p>Alignements sans restrictions 4.5</p>
                                                     <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
                                                     <a id = "warning" class="link-aligne"  href="align_Possibles.html" style="color: black" alt="#Alignements Possibles"> Alignements possibles </a>
                                                     </button>
                                                     <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
                                                         <a  class="link-aligne"  href="aligneCon3.html" style="color:red" alt="#Alignements regle 4.5"> Alignements possibles avec règle 4.5 </a>
                                                         </button>
-                                                    <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
+                                                    <!-- <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
                                                         <a  class="link-aligne"  href="align2Elites.html" style="color:red" alt="#Alignements deux Elites"> Alignements possibles deux Elites </a>
-                                                            </button>
+                                                            </button> -->
                                                     
                                                     <div id="testEq"></div>
                                     </div>
