--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ section{
                                                     <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
                                                         <a  class="link-aligne"  href="aligneCon3.html" style="color:red" alt="#Alignements regle 4.5"> Alignements possibles avec règle 4.5 </a>
                                                         </button>
-                                                    <!-- <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
+                                                    <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
                                                         <a  class="link-aligne"  href="align2Elites.html" style="color:red" alt="#Alignements deux Elites"> Alignements possibles deux Elites </a>
-                                                            </button> -->
+                                                            </button>
                                                     
                                                     <div id="testEq"></div>
                                     </div>
