removed xSelect from index

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ section{
                                 <h4 id="choose">Sélectionnez vos joueuses</h4>
                                 <label for="selJoueur" style="text-align: left; margin-top: 2%;">Faites votre choix</label>
                                 <select id="selJoueur" selected="selected" name="selJoueur" class="C form-control mb-2 mr-sm-2" size="10"
-                                multiple onchange="infoJoueur(this);displayPlayers(this);">
+                                 onchange="infoJoueur(this);displayPlayers(this);">
                                 <option value="" disabled selected hidden>-- Construire votre sélection --</option>
                                  <!-- options loaded dynamically -->
                                 </select>
