--- a/align2Elites.html
+++ b/align2Elites.html
@@ -40,7 +40,7 @@
     
     
 <h4>Alignements possibles  pour cette semaine:  <span style="font-weight: 600;color:rgb(250, 14, 14)">avec deux (Super)élites, <br>
-  et les 4.5 peuvent jouer sur le 3?</span></h4> 
+  </span></h4> 
 
 
 <input type="text" style="width:500px" id="searchInput" placeholder="Chercher les alignements contenant une ou deux joueuses">
