fixed selection display

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ h3#bolder{
   /* Make height responsive based on width */
   height: auto;             /* allows height to grow */
   min-height: 300px;        /* fallback for very small screens */
-  aspect-ratio: 16 / 9;     /* optional, keeps relative proportions */
+  /* aspect-ratio: 16 / 9;     optional, keeps relative proportions */
 }
 
 
