--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 } */
 
         body{
-            transform: scale(0.8);
+            transform: scale(0.9);
             transform-origin: center 0;
             background-image: url("Images/lady.jpg");
         }
@@ -122,7 +122,7 @@ h3#bolder{
                <div class="row justify-content-center">
                        
                      <div class="col-12 col-md-6 col-lg-6">
-                            <div class="card" style="max-width:900px">
+                            <div class="card" style="max-width:1000px">
                                 <!-- <img id="photoJoueur"  src="Images/equipe1.jpg" alt="teamjpg" style="max-width: 60%; object-fit:cover;"> -->
                                 <div id="photoJoueur" class="photo-box"></div>
 
@@ -155,7 +155,7 @@ h3#bolder{
                                         <div id="nbDispo" class="list-players warning">   <br>                   
                                                     
                                         </div>
-                                        <div id = "gotoSelPlayers"><u><strong><a style="font-size:1.5rem ; color:darkblue" href='#choose'>Aller à la sélection des joueuses</a></strong></u><br>
+                                        <div id = "gotoSelPlayers"><u><strong><a style="margin-bottom:3px;font-size:1.5rem ; color:darkblue" href='#choose'>Aller à la sélection des joueuses</a></strong></u><br>
                                         </div>
                                         <div id="cancelbtn">
                                             <input type="button" onclick="clearlast();displayPlayers()" style="max-width: 90%; white-space: normal" value="Annuler votre dernier choix"> <br>
