--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@ h3#bolder{
                                                         <a id = "warning" class="link-aligne"  href="align_Possibles.html" style="color: black" alt="#Alignements Possibles"> Alignements possibles avec une élite </a>
                                                         </button> -->
                                                         <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
-                                                            <a  class="link-aligne"  href="aligneCon3.html" style="color:red" alt="#Alignements regle 4.5"> Alignements possibles avec une élite </a><br>
+                                                            <a  class="link-aligne"  href="aligneElite1.html" style="color:red" alt="#Alignements regle 4.5"> Alignements possibles avec une élite </a><br>
                                                         </button>
                                                         <button class="align" class="btn-success" style="max-width: 90%; white-space: normal">                  
                                                             <a  class="link-aligne"  href="align2Elites.html" style="color:red" alt="#Alignements deux Elites"> Alignements possibles deux Elites+ </a><br>
                                                         </button>
                                                         
-                                                        <div id="testEq"></div>
+                                                        <!-- <div id="testEq"></div> -->
                                         </div>
                                 </div>
                             </div>               
