--- a/align2Elites.html
+++ b/align2Elites.html
@@ -43,7 +43,8 @@
   </span></h4> 
 
 
-<input type="text" style="width:500px" id="searchInput" placeholder="Chercher les alignements contenant une ou deux joueuses">
+<p>Chercher par terrain suivi de 2 noms de joueuses pour ce terrain là ou chercher par noms , 4 termes maximum</p>  
+<input type="text" style="width:500px" id="searchInput" placeholder="chercher des alignements">
     <button onclick="searchTeams(Eq)">Search</button>
     
     <ul id="resultList"> </ul>
