--- a/aligneElite1.html
+++ b/aligneElite1.html
@@ -35,8 +35,8 @@
      <p style="font-weight:600;" id="nbrDispo">Nombre de joueuses sélectionées : </p>
     </div> 
     <div id="testteams"></div>
-    
-<input type="text" style="width:500px" id="searchInput" placeholder="Chercher les alignements contenant une ou deux joueuses">
+  <p>Chercher par terrain suivi de 2 noms de joueuses pour ce terrain là ou chercher par noms , 4 termes maximum</p>  
+<input type="text" style="width:500px" id="searchInput" placeholder="chercher des alignements">
     <button onclick="searchTeams(Eq)">Search</button>  <br><br>  
 <h4>Alignements possibles pour cette semaine</h4> 
 
